@@ -1,7 +1,6 @@
 # Generated by roxygen2: do not edit by hand
 
 export(activelearning)
-export(activelearning_sim)
 export(query_bagging)
 export(query_committee)
 export(query_oracle)
